[package]
name = "gptask"
description = "simple chatGPT CLI"
repository = "https://github.com/mcdallas/gptask"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[[bin]]
name = "gptask"
path = "src/main.rs"
